<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_pass"
        app:layout_constraintBottom_toTopOf="@+id/registration_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_log_in">

        <EditText
            android:id="@+id/registration_student_number"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/registration_border_bottom"
            android:ems="10"
            android:hint="@string/registration_student_number"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/registration_student_personal_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/registration_student_personal_number"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/registration_border_top"
            android:ems="10"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/registration_student_personal_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_student_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/registration_enter"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/registration"
        android:text="@string/registration_enter"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/registration_cannot_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/registration_cannot_enter"
        android:layout_width="152dp"
        android:layout_height="38dp"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="326dp"
        android:gravity="center"
        android:text="@string/registration_cannot_enter"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_enter" />

    <TextView
        android:id="@+id/registration_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="18dp"
        android:text="@string/registration_log_in"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>